src/test/ui/issues/issue-32709.stderr
error[E0277]: `?` couldn't convert the error to `()`
  --> $DIR/issue-32709.rs:4:5
   |
LL | fn a() -> Result<i32, ()> {
   |           --------------- expected `()` because of this
LL |     Err(5)?;
   |     ^^^^^^^ the trait `From<{integer}>` is not implemented for `()`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = note: required because of the requirements on the impl of `FromResidual<std::result::Result<!, {integer}>>` for `std::result::Result<i32, ()>`
   = note: required by `from_residual`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
